// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics|Colors all 1`] = `
<div
  className="container p-4"
>
  <h1
    className="text-xl"
  >
    Primary
  </h1>
  <div
    className="flex mt-4"
  >
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(51, 51, 51)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        default
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(0, 0, 0)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P95
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(10, 10, 10)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P80
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(20, 20, 20)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(31, 31, 31)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(41, 41, 41)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P20
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(245, 245, 245)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N95
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(214, 214, 214)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N80
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(173, 173, 173)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(133, 133, 133)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(92, 92, 92)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N20
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|Typography Body 1`] = `
Array [
  <section
    className="container p-4 undefined"
  >
    <h1
      className="text-4xl"
    >
      PC
    </h1>
    <div
      className="flex"
    >
      <div
        className="mt-8 w-64"
      >
        <h2
          className="text-xl"
        >
          Heading
        </h2>
        <ul
          className="list-reset mt-4"
        >
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "24px",
              }
            }
          >
            H1
             - 
            24px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "22px",
              }
            }
          >
            H2
             - 
            22px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "20px",
              }
            }
          >
            H3
             - 
            20px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "18px",
              }
            }
          >
            H4
             - 
            18px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            H5
             - 
            16px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "14px",
              }
            }
          >
            H6
             - 
            14px
          </li>
        </ul>
      </div>
      <div
        className="mt-8 w-64"
      >
        <h2
          className="text-xl"
        >
          Body
        </h2>
        <ul
          className="list-reset mt-4"
        >
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "18px",
              }
            }
          >
            XL
             - 
            18px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            L
             - 
            16px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "14px",
              }
            }
          >
            default
             - 
            14px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "12px",
              }
            }
          >
            S
             - 
            12px
          </li>
        </ul>
      </div>
    </div>
  </section>,
  <section
    className="container p-4 mt-12"
  >
    <h1
      className="text-4xl"
    >
      SP
    </h1>
    <div
      className="flex"
    >
      <div
        className="mt-8 w-64"
      >
        <h2
          className="text-xl"
        >
          Heading
        </h2>
        <ul
          className="list-reset mt-4"
        >
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "24px",
              }
            }
          >
            H1
             - 
            24px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "22px",
              }
            }
          >
            H2
             - 
            22px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "20px",
              }
            }
          >
            H3
             - 
            20px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "18px",
              }
            }
          >
            H4
             - 
            18px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            H5
             - 
            16px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "14px",
              }
            }
          >
            H6
             - 
            14px
          </li>
        </ul>
      </div>
      <div
        className="mt-8 w-64"
      >
        <h2
          className="text-xl"
        >
          Body
        </h2>
        <ul
          className="list-reset mt-4"
        >
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "18px",
              }
            }
          >
            XL
             - 
            18px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            L
             - 
            16px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "14px",
              }
            }
          >
            default
             - 
            14px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "12px",
              }
            }
          >
            S
             - 
            12px
          </li>
        </ul>
      </div>
    </div>
  </section>,
]
`;

exports[`Storyshots Components|Badge all 1`] = `
<div
  className="sc-bwzfXH GIbIi"
>
  10
</div>
`;

exports[`Storyshots Components|Button Box 1`] = `
<button
  className="sc-htpNat fRwifO"
  onClick={[Function]}
  type="box"
>
  Confirm
</button>
`;

exports[`Storyshots Components|Button Circle 1`] = `
<button
  className="sc-ifAKCX cvHGqt"
  onClick={[Function]}
  type="circle"
/>
`;

exports[`Storyshots Components|Button Component 1`] = `
<button
  className="sc-EHOje dOmtJl"
  onClick={[Function]}
  type="text"
>
  <span
    className="sc-bZQynM hzvjZm"
    data-test="text-button-child"
  >
    Show filters
  </span>
</button>
`;

exports[`Storyshots Components|Checkbox all 1`] = `
<div
  className="sc-gzVnrw iyQuzR"
  data-test="nocheck-box"
  onClick={[Function]}
  tabIndex={1}
>
  <div
    className="sc-htoDjs irgUaa sc-bxivhb hBuNrQ"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    size="24px"
  />
  <span
    className="sc-dnqmqq gZhRLK"
  >
    Checkbox
  </span>
</div>
`;

exports[`Storyshots Components|DropdownMultiple Multi 1`] = `
<div
  className="ml-20 mt-10"
>
  <div>
    <div
      className="sc-gZMcBi bQuQoO"
      data-test="body"
      onClick={[Function]}
      selected={Array []}
      width={200}
    >
      <div
        className="sc-gqjmRU jBAKkK"
        data-test="text"
        width={200}
      >
        選択してください
      </div>
      <div
        className="sc-iwsKbI iadtKx sc-bxivhb hBuNrQ"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
    </div>
    <ul
      className="sc-cSHVUG bKhTjk hide sc-jTzLTM dhmccs"
      data-test="itemList"
      width={200}
    >
      <li
        className="sc-fjdhpX LflDN"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb hBuNrQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-jzJRlG jlBakv"
        >
          りんご
        </div>
      </li>
      <li
        className="sc-fjdhpX LflDN"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb hBuNrQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-jzJRlG jlBakv"
        >
          いちご
        </div>
      </li>
      <li
        className="sc-fjdhpX LflDN"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb hBuNrQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-jzJRlG jlBakv"
        >
          バナナ
        </div>
      </li>
      <li
        className="sc-fjdhpX LflDN"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb hBuNrQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-jzJRlG jlBakv"
        >
          メロン
        </div>
      </li>
      <li
        className="sc-fjdhpX LflDN"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb hBuNrQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-jzJRlG jlBakv"
        >
          さくらんぼ
        </div>
      </li>
      <li
        className="sc-fjdhpX LflDN"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb hBuNrQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-jzJRlG jlBakv"
        >
          ぶどう
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components|DropdownSingle Body 1`] = `
<div
  className="ml-20 mt-10"
>
  <div
    className="sc-chPdSV gKyyYH"
    data-test="body"
    width={200}
  >
    <div
      className="sc-kgoBCf leIeJw"
      data-test="text"
      width={200}
    >
      選択してください
    </div>
    <div
      className="sc-kAzzGY cFmvJn sc-bxivhb hBuNrQ"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      size="24px"
    />
  </div>
</div>
`;

exports[`Storyshots Components|DropdownSingle ItemList 1`] = `
<div
  className="ml-20 mt-10"
>
  <ul
    className="undefined hide sc-kGXeez csjjkQ"
    data-test="itemList"
    width={200}
  >
    <li
      className="sc-kpOJdX fqiEGF"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-dxgOiQ ddGaJS"
      >
        りんご
      </div>
    </li>
    <li
      className="sc-kpOJdX fqiEGF"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-dxgOiQ ddGaJS"
      >
        いちご
      </div>
    </li>
    <li
      className="sc-kpOJdX fqiEGF"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-dxgOiQ ddGaJS"
      >
        バナナ
      </div>
    </li>
    <li
      className="sc-kpOJdX fqiEGF"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-dxgOiQ ddGaJS"
      >
        メロン
      </div>
    </li>
    <li
      className="sc-kpOJdX fqiEGF"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-dxgOiQ ddGaJS"
      >
        さくらんぼ
      </div>
    </li>
    <li
      className="sc-kpOJdX fqiEGF"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-dxgOiQ ddGaJS"
      >
        ぶどう
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components|DropdownSingle Single 1`] = `
<div
  className="ml-20 mt-10"
>
  <div>
    <div
      className="sc-chPdSV gKyyYH"
      data-test="body"
      onClick={[Function]}
      width={200}
    >
      <div
        className="sc-kgoBCf leIeJw"
        data-test="text"
        width={200}
      >
        選択してください
      </div>
      <div
        className="sc-kAzzGY cFmvJn sc-bxivhb hBuNrQ"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
    </div>
    <ul
      className="sc-ckVGcZ iINwpW hide sc-kGXeez csjjkQ"
      data-test="itemList"
      width={200}
    >
      <li
        className="sc-kpOJdX fqiEGF"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb eaqBKs"
          color="rgb(234, 234, 234)"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-dxgOiQ ddGaJS"
        >
          りんご
        </div>
      </li>
      <li
        className="sc-kpOJdX fqiEGF"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb eaqBKs"
          color="rgb(234, 234, 234)"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-dxgOiQ ddGaJS"
        >
          いちご
        </div>
      </li>
      <li
        className="sc-kpOJdX fqiEGF"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb eaqBKs"
          color="rgb(234, 234, 234)"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-dxgOiQ ddGaJS"
        >
          バナナ
        </div>
      </li>
      <li
        className="sc-kpOJdX fqiEGF"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb eaqBKs"
          color="rgb(234, 234, 234)"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-dxgOiQ ddGaJS"
        >
          メロン
        </div>
      </li>
      <li
        className="sc-kpOJdX fqiEGF"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb eaqBKs"
          color="rgb(234, 234, 234)"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-dxgOiQ ddGaJS"
        >
          さくらんぼ
        </div>
      </li>
      <li
        className="sc-kpOJdX fqiEGF"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb eaqBKs"
          color="rgb(234, 234, 234)"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-dxgOiQ ddGaJS"
        >
          ぶどう
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components|Input Number 1`] = `
<input
  className="sc-hSdWYo jFWIjm"
  format="number"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter your age"
  value="0"
/>
`;

exports[`Storyshots Components|Input Text 1`] = `
<input
  className="sc-hSdWYo jFWIjm"
  format="text"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter your name"
  value=""
/>
`;

exports[`Storyshots Components|RadioButton all 1`] = `
<div
  className="sc-eHgmQL fwHOSR"
  data-test="radio-on"
  onClick={[Function]}
>
  <div
    className="sc-cvbbAY bZUolu sc-bxivhb hBuNrQ"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    size="24px"
  />
  <span
    className="sc-jWBwVP cBQJpB"
  >
    RadioButton
  </span>
</div>
`;

exports[`Storyshots Components|SegmentedControl molecule 1`] = `
<div>
  <div
    className="sc-brqgnP bAbGpk"
    data-test="item0"
    onClick={[Function]}
    selected={true}
  >
    最初のタブ
  </div>
  <div
    className="sc-brqgnP cOFHuA"
    data-test="item1"
    onClick={[Function]}
    selected={false}
  >
    真ん中のタブ
  </div>
  <div
    className="sc-brqgnP cOFHuA"
    data-test="item2"
    onClick={[Function]}
    selected={false}
  >
    最後のタブ
  </div>
</div>
`;

exports[`Storyshots Components|Switch all 1`] = `
<div
  className="m-10"
>
  <div
    className="sc-cMljjf dMgCqd"
    data-test="switch-off"
  >
    <span
      className="sc-gPEVay iueXMf"
    >
      OFF
    </span>
    <div
      className="sc-jAaTju laSRKC"
      data-test="switch"
      onClick={[Function]}
    >
      <span
        className="sc-jDwBTQ iCvdiJ"
      />
    </div>
    <span
      className="sc-gPEVay iueXMf"
    >
      ON
    </span>
  </div>
</div>
`;

exports[`Storyshots Components|Text Standard 1`] = `
<p
  className="sc-iRbamj jYArhN"
>
  Hello
</p>
`;

exports[`Storyshots Components|Textarea all 1`] = `
<textarea
  className="sc-jlyJG gIoPoK"
  errored={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="文字を入力してください。"
  style={
    Object {
      "height": 0,
    }
  }
  value=""
/>
`;

exports[`Storyshots Components|Toast all 1`] = `
<div
  className="m-10"
>
  <div
    className="sc-gipzik cyQwiN"
    data-test="info-toast"
  >
    <div
      className="sc-Rmtcm eQvIAW sc-bxivhb dUTGrc"
      color="white"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      size="24px"
    />
    <div>
      <div
        className="sc-bRBYWo jaeRtk"
      >
        ラベル
      </div>
      <div
        className="sc-hzDkRC dIyvGf"
      >
        ここにテキスト。
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|ToolTip all 1`] = `
<div
  className="sc-jhAzac kZVCle"
  data-test="tool-tip"
  direction="top"
>
  <span
    className="sc-fBuWsC jTuoOz"
  >
    テキスト要素
  </span>
</div>
`;

exports[`Storyshots basics|Icons index 1`] = `
<div
  className="flex flex-wrap w-64"
>
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
</div>
`;

exports[`Storyshots components|FileUploader all 1`] = `
<div
  className="m-10"
>
  <label
    className="sc-jKJlTe loXQau"
    htmlFor="file"
  >
    <div
      className="sc-eNQAEJ lnouVj"
    >
      <input
        className="sc-iAyFgw ebsiN"
        id="file"
        onChange={[Function]}
        onClick={[Function]}
        type="file"
      />
      <div
        className="sc-hMqMXs iCTOLy"
      >
        <div
          className="sc-kEYyzF bHkOHB sc-bxivhb hBuNrQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <span
          className="sc-kkGfuU gXGKTJ"
        >
          ファイルを選択またはドラッグ&ドロップ
        </span>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots components|Icon Standard 1`] = `
<div
  className="sc-bxivhb edXnbt"
  color="#333"
  dangerouslySetInnerHTML={
    Object {
      "__html": undefined,
    }
  }
  size="24px"
/>
`;
